--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color:  #444444;
 }
 
 .App-logo {
@@ -24,14 +25,29 @@
 
 .currency-tablet {
     position: relative;
-    margin: 15px 0;
-    padding: 39px 19px 14px;
-    background-color:  #d9d9d9;
-    border-color: #080808;
+    margin: 5px 0;
+    padding: 15px 15px 15px 15px;
+    background-color: #f5f5f5;
+    border-color: #fff;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    color:  #404040;
+}
+
+.tablet-title {
+  font-size: 250%;
+}
+
+.tablet-panel-interior {
+  margin-bottom: 5px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  background-color: #ffffff;
+  padding: 2px 2px 2px 2px;
+}
+
+.tablet-panel-interior-title {
+  font-size: 150%;
 }
 
 @keyframes App-logo-spin {
