--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,8 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  min-width: 250px;
+  min-height: 300px;
 }
 
 .tablet-title {
@@ -48,6 +50,13 @@
 
 .tablet-panel-interior-title {
   font-size: 150%;
+}
+
+.panel-icon{
+  width:100%;
+  max-width:100px;
+  max-height: 100px;
+  padding: 5px;
 }
 
 .button-panel {
@@ -137,3 +146,4 @@
   top: 30%;
   box-shadow: 0px 0px 30px 20px grey;
 }
+
